# caresync-backend

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
patient_care_backend/: __init__.py  config.py  index_knowledge_base.py  main.py  schemas.py
patient_care_backend/brain/: __init__.py  baseline_graph.py  graph.py  nodes.py
patient_care_backend/services/: __init__.py  actions.py  anonymizer.py  baseline_analytics.py  context_indexer.py  knowledge_base.py  llm.py  vector_store.py  vital_validation.py
tests/: test_baseline_analytics.py  test_brain_smoke.py  test_context_indexer.py  test_knowledge_base.py  test_vital_validation.py
